<resources>
    <string name="app_name">FLITapp</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="response">Отклики</string>
    <string name="message">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="whatsurname">Как вас зовут?</string>
    <string name="whatsuremail">Укажите почту</string>
    <string name="header_complete_reg">Последний шаг!</string>
    <string name="sub_header_last_step">Укажите номер телефона для подтверждения учётной записи!</string>
    <string name="reg_btn_complete">Завершить</string>
    <string name="reg_send_code_again">Отправить код снова</string>
    <string name="reg_send_code">Отправить код</string>
    <string name="reg_btn_create_account">Создать аккаунт</string>
    <string name="reg_privacy">Нажимая на кнопку, вы принимаете условия сервиса</string>
    <string name="reg_input_example_name">Степан</string>
    <string name="reg_input_example_email">example@gmail.com</string>
    <string name="reg_btn_save">Сохранить</string>
    <string name="reg_btn_add_later">Добавить позже</string>
    <string name="search_header_tasks">Актуальные задания</string>
    <string name="search_task_text">Необходимо создать сайт под ключ для компании по оказании бухгалтерских услуг. На сайте будет должны присутствовать обратные формы, карта, преимущества компании и личный кабинет, также необходимо сделать калькулятор стоимости.</string>
    <string name="profile_task_test">Изменить цены на всех товарах сайта, товаров примерно 100</string>
    <string name="search_task_text2">Мужики! Нужен толковый парень чтобы слепить нам сайт для нашей автомастерской! Оплатой не обидим! Все подробности после отлика!</string>
    <string name="search_task_text3">Есть приложение для конференций на iOS (Swift/Obj-C)  Функции приложения: - список конференций - авторизация (вход) в свою конференцию - список участников конференции - чат с выбранным участником (socket)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>