<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_response"
        android:title="@string/response"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/message"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>